# madochan_server

./: .gitmodules  pyproject.toml
madochan_api/: __init__.py  web.py
madochan_frontend/: index.html  package-lock.json  package.json
madochan_frontend/src/: App.vue  api.ts  config.ts
madochan_frontend/src/components/: Control.vue
scripts/: dev-api  dev-frontend
