[tool.poetry]
name = "madochan-api"
version = "0.1.0"
description = ""
authors = ["Zutatensuppe <oo.para@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
tensorflow = "^2.5.0"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
uvicorn = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
